--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,10 +1,10 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <h1>
-        <a href="{{ site.baseurl }}">
+      <div>
+        <span href="{{ site.baseurl }}">
           {{ site.title }}
-        </a>
+        </span>
       </h1>
       <p class="lead">{{ site.description }}</p>
     </div>
