changed sidebar style
changed sidebar style

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,11 +2,11 @@
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <div>
-        <span href="{{ site.baseurl }}">
+        <p class="lead" href="{{ site.baseurl }}">
           {{ site.title }}
-        </span>
+        </p>
       </h1>
-      <p class="lead">{{ site.description }}</p>
+      <p>{{ site.description }}</p>
     </div>
 
     <nav class="sidebar-nav">
